--- a/css/work.css
+++ b/css/work.css
@@ -18,7 +18,7 @@ height:50px;
 line-height:50px;
 font-size:20px;
 padding:25px 0px;
-background-color:#FFDE88;
+background-color:#2ecc71;
 color:#fff;
 }
 div#nav
@@ -54,7 +54,7 @@ div#home
 {
 width:100%;
 height:100%;
-background-color:#EEB213;
+background-color:#27ae60;
 }
 div.centerpos
 {
